# termux-hermes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-wheelhouse.yml  ci.yml
audit/: build-metadata.json  direct.in  emulator-audit.json  lock-constraints.txt  resolved.txt
manifest/: wheels.json
scripts/: audit_pypi.py  build_wheels.py  checksum_artifact.py  termux_build.sh  verify_wheelhouse.py
tests/: test_build_wheels.py
