[project]
name = "termux-hermes-wheelhouse"
version = "0.1.0"
description = "Immutable native Android wheel builder for Hermes Agent on Termux"
requires-python = ">=3.11"
dependencies = ["packaging==26.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
